[Backend] improve timedata querys
- Add separate pool for timedata queries
- add metrics for ui requests

Reviewed-by: Franz Reiter <1498918+Howaner@users.noreply.github.com>
Reviewed-by: Stefan Feilmeier <3515268+sfeilmeier@users.noreply.github.com>
Co-authored-by: Michael Grill <59126309+michaelgrill@users.noreply.github.com>
Co-committed-by: Michael Grill <59126309+michaelgrill@users.noreply.github.com>